# rs-merk-verify-c-binding

./: .gitignore  Cargo.toml  README.md  build.rs  runc.sh
c/: CMakeLists.txt  README.md  hexutils.c  main.c  run.sh
src/: lib.rs  main.rs
