[package]
name = "rs-merk-verify-c-binding"
version = "0.1.1"
edition = "2018"
build = "build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.merk]
git = "https://github.com/dashevo/merk"
branch = "v0.1-dev"
features = ["verify"]
default-features = false


[lib]
crate-type = ["staticlib", "cdylib"]      # Creates dynamic lib
name = "merk"

[build-dependencies]
cbindgen = "0.20.0"

[profile.release]
lto = "thin"
opt-level = 3
